refactor: day 09 (class and tests)